navbar z-index to prevent things overlapping it

--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -4,6 +4,7 @@
   width: 100%;
   height: 64px;
   background: #40916C;
+  z-index: 2;
 }
 
 .navbar-container {
